fix: Reduce header letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -346,7 +346,7 @@ body> header h1,
   padding: 1em 1rem;
   font-size: 1.25em;
   font-weight: normal;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.1em;
   text-transform: uppercase;
 }
 
